--- a/pamoka2/uzduotis2.html
+++ b/pamoka2/uzduotis2.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Kelionės</h1>
     <ol>
-        <Li><a href="keliones/Paskutine_minute.html">Paskutinė minutė</a></Li>
+        <li><a href="keliones/Paskutine_minute.html">Paskutinė minutė</a></li>
         <li><a href="keliones/poilsines_keliones.html">Poilsinės kelionės</a></li>
         <li><a href="keliones/kelioniu_datos.html">Kelionių datos</a></li>
     </ol>
