--- a/pamoka2/keliones/Paskutine_minute.html
+++ b/pamoka2/keliones/Paskutine_minute.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Paskutinė minutė</h1>
-        <P>Ispanija, Kosta dorada</P>
+        <p>Ispanija, Kosta dorada</p>
         <img src="./pexels-photo-1152359.jpeg" alt="Kosta Dorada">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ipsa animi hic. Iusto voluptate, ratione commodi doloribus, culpa consectetur sint laudantium, illum amet atque aliquid nulla ipsam porro obcaecati modi.</p>
         <p><b>Išvykimo laikai:</b></p>
