--- a/pamoka3/uzduotis6.html
+++ b/pamoka3/uzduotis6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>uzduotis6</title>
     <style>
         table, th, td {
             border: 1px solid black;
@@ -55,13 +55,97 @@
             <td>0</td>
             <td></td>
         </tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
+        <tr>
+            <th>Earth</th>
+            <td>5.97</td>
+            <td>12,756</td>
+            <td>5514</td>
+            <td>9.8</td>
+            <td>24.0</td>
+            <td>149.6</td>
+            <td>15</td>
+            <td>1</td>
+            <td>Our world
+            </td>
+        </tr>
+        <tr>
+            <th>Mars</th>
+            <td>0.642</td>
+            <td>6,792</td>
+            <td>3933</td>
+            <td>3.7</td>
+            <td>24.7</td>
+            <td>227.9</td>
+            <td>-65	</td>
+            <td>2</td>
+            <td>The red planet
+            </td>
+        </tr>
+        <tr>
+            <th rowspan="4">Jovian planets</th>
+            <th rowspan="2">Gas giants</th>
+            <th>Jupiter</th>
+            <td>1898</td>
+            <td>142,984</td>
+            <td>1326</td>
+            <td>23.1</td>
+            <td>9.9</td>
+            <td>778.6</td>
+            <td>-110</td>
+            <td>67</td>
+            <td>The largest planet
+            </td>
+        </tr>
+        <tr>
+            <th>Saturn</th>
+            <td>568</td>
+            <td>120,536</td>
+            <td>687</td>
+            <td>9.0</td>
+            <td>10.7</td>
+            <td>1433.5</td>
+            <td>-140</td>
+            <td>62</td>
+            <td></td>
+        </tr>
+        <tr>
+            <th rowspan="2"></th>
+            <th>Uranus</th>
+            <td>86.8</td>
+            <td>51,118</td>
+            <td>1271</td>
+            <td>8.7</td>
+            <td>17.2</td>
+            <td>2872.5</td>
+            <td>-195</td>
+            <td>27</td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>Neptune</th>
+            <td>102</td>
+            <td>49,528</td>
+            <td>1638</td>
+            <td>11.0</td>
+            <td>16.1</td>
+            <td>4495.1</td>
+            <td>-200</td>
+            <td>14</td>
+            <td></td>
+        </tr>
+        <tr>
+            <th colspan="2">Dwarf planets</th>
+            <th>Pluto</th>
+            <td>0.0146</td>
+            <td>2,370</td>
+            <td>2095</td>
+            <td>0.7</td>
+            <td>153.3</td>
+            <td>5906.4</td>
+            <td>-225</td>
+            <td>5</td>
+            <td>Declassified as a planet in 2006, but this remains controversial.</td>
+        </tr>
     </table>
 </body>
 </html>
