--- a/pamoka3/uzduotis8.html
+++ b/pamoka3/uzduotis8.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>Timetable</h1>
+    <caption>Ians timetable</caption>
         <table>
             <tr>
                 <td></td>
