--- a/pamoka3/uzduotis3.html
+++ b/pamoka3/uzduotis3.html
@@ -23,13 +23,13 @@
             <th>RGB value</th>
         </tr>
         <tr>
-            <td bgcolor="salmon"></td>
+            <td style="background-color:salmon;"></td>
             <td>salmon</td>
             <td>FA8027</td>
             <th>250-128-114</th>
         </tr>
         <tr>
-            <td bgcolor="gold"></td>
+            <td style="background-color:gold"></td>
             <td>gold</td>
             <td>FFD700</td>
             <th>255-215-0</th>
