--- a/pamoka3/uzduotis7.html
+++ b/pamoka3/uzduotis7.html
@@ -19,31 +19,31 @@
 <body>
     <table>
         <tr>
-            <th colspan="2" rowspan="9" bgcolor="red" style="width: 100px;"></th>
-            <th colspan="2" rowspan="2" bgcolor="white"></th>
-            <th colspan="3" rowspan =2 bgcolor="green"></th>
-            <th colspan="2" rowspan="2" bgcolor="white"></th>
-            <th colspan="2" rowspan="9" bgcolor="red" style="width: 100px;"></th>
+            <th colspan="2" rowspan="9" style="width: 100px; background-color: red;"></th>
+            <th colspan="2" rowspan="2" style="background-color:white"></th>
+            <th colspan="3" rowspan =2 style="background-color:green"></th>
+            <th colspan="2" rowspan="2" style="background-color:white"></th>
+            <th colspan="2" rowspan="9" style="width: 100px; background-color: red"></th>
         </tr>
         <tr></tr>
         <tr>
-            <td colspan="7" rowspan="2" bgcolor="blue"></td>
+            <td colspan="7" rowspan="2" style="background-color:blue"></td>
         </tr>
         <tr></tr>
         <tr>
-            <td style="height: 35px;" bgcolor="white"></td>
+            <td style="height: 35px;" style="background-color:white"></td>
             <td style="height: 35px;" bgcolor="purple"></td>
-            <td style="height: 35px;" bgcolor="white"></td>
+            <td style="height: 35px;" style="background-color:white"></td>
             <td style="height: 35px;" bgcolor="purple"></td>
-            <td style="height: 35px;" bgcolor="white"></td>
+            <td style="height: 35px;" style="background-color:white"></td>
             <td style="height: 35px;" bgcolor="purple"></td>
-            <td style="height: 35px;" bgcolor="white"></td>
+            <td style="height: 35px;" style="background-color:white"></td>
         </tr>
         <tr>
-            <td colspan="7" rowspan="2" bgcolor="green"></td>
+            <td colspan="7" rowspan="2" style="background-color:green"></td>
         </tr>
         <tr></tr>
-        <tr><td colspan="7" rowspan="2" bgcolor="purple"></td></tr>
+        <tr><td colspan="7" rowspan="2" style="background-color:purple"></td></tr>
         <tr></tr>
     </table>
 </body>
