--- a/pamoka5/uzduotis1.html
+++ b/pamoka5/uzduotis1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="uzduotis1.css">
 </head>
     <body>
-        <div class="half-box"></div>
-        <div class="half-box"></div>
+        <div class="box w40"></div>
+        <div class="box w40"></div>
     </body>
 </html>
