--- a/pamoka5/uzduotis2.html
+++ b/pamoka5/uzduotis2.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="uzduotis1.css">
 </head>
     <body>
-        <div class="top-bar"></div>
-        <div class="half-box"></div>
-        <div class="half-box"></div>
+        <div class="nav-bar"></div>
+        <div class="box w40"></div>
+        <div class="box w40"></div>
     </body>
 </html>
