--- a/pamoka5/uzduotis3.html
+++ b/pamoka5/uzduotis3.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="uzduotis1.css">
 </head>
     <body>
-        <div class="top-bar"></div>
+        <div class="nav-bar"></div>
 
-        <div class="half-box"></div>
-        <div class="half-box no-border">
-            <div class="half-bar"></div>
-            <div class="half-bar"></div>
+        <div class="box w40"></div>
+        <div class="box w40 no-border">
+            <div class="inside-bar"></div>
+            <div class="inside-bar"></div>
         </div>
-        <div class="bottom-bar"></div>
+        <div class="nav-bar"></div>
     </body>
 </html>
