--- a/pamoka5/uzduotis3.html
+++ b/pamoka5/uzduotis3.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uzduotis1</title>
-    <link rel="stylesheet" href="uzduotis1.css">
+    <link rel="stylesheet" href="uzduotis3.css">
 </head>
     <body>
         <div class="nav-bar"></div>
 
-        <div class="box w40"></div>
-        <div class="box w40 no-border">
+        <div class="box"></div>
+        <div class="box no-border">
             <div class="inside-bar"></div>
             <div class="inside-bar"></div>
         </div>
