--- a/pamoka5/uzduotis4.html
+++ b/pamoka5/uzduotis4.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uzduotis1</title>
-    <link rel="stylesheet" href="uzduotis1.css">
+    <link rel="stylesheet" href="uzduotis4.css">
 </head>
     <body>
-        <div class="box w25">
-            <div class="inside-bar h28 block"></div>
-            <div class="inside-bar h28 inline"></div>
-            <div class="inside-bar h28 inline"></div>
+        <div class="box-left">
+            <div class="inside-bar"></div>
+            <div class="inside-bar"></div>
+            <div class="inside-bar"></div>
         </div>
-        <div class="box w40">
-            <div class="inside-bar h28"></div>
-            <div class="inside-bar no-border h48">
-                <div class="inside-bar w45 h90"></div>
-                <div class="inside-bar w45 h90"></div>
+        <div class="box-right">
+            <div class="inside-bar"></div>
+            <div class="inside-bar no-border">
+                <div class="smaller-bar"></div>
+                <div class="smaller-bar"></div>
             </div>
         </div>
     </body>
