--- a/pamoka6/uzduotis6.html
+++ b/pamoka6/uzduotis6.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="uzduotis6.css">
 </head>
 <body>
-    <div class="container">
-        <div class="box-left">contact</div>
-        <div class="box-left">careers</div>
-        <div class="container2">
-            <div class="box-right">about</div>
+    <div class="container grow1">
+        <div class="box color-blue">contact</div>
+        <div class="box color-blue">careers</div>
+        <div class="container2 grow5">
+            <div class="box grow5"></div>
+            <div class="box color-blue">about</div>
         </div>
-        
     </div>
 </body>
 </html>
