--- a/pamoka6/uzduotis5.html
+++ b/pamoka6/uzduotis5.html
@@ -11,16 +11,21 @@
     <h1>Task 4</h1>
     <p>In this task, we want you to arrange these items into rows as in the image below:</p>
     <div class="container">
-        <div class="box">turnip</div>
-        <div class="box">greens</div>
-        <div class="box">yarrow</div>
-        <div class="box">ricebean</div>
-        <div class="box">rutabaga</div>
-        <div class="box">endive</div>
-        <div class="box">cauliflower</div>
-        <div class="box">sea lettuce</div>
-        <div class="box">kohlrabi</div>
-        <div class="box">amaranth</div>
+            <div class="box">turnip</div>
+            <div class="box">greens</div>
+            <div class="box">yarrow</div>
+            <div class="box">ricebean</div>
+    </div>
+    <div class="container">
+            <div class="box">rutabaga</div>
+            <div class="box">endive</div>
+            <div class="box">cauliflower</div>
+    </div>
+    <div class="container">
+            <div class="box">sea lettuce</div>
+            <div class="box">kohlrabi</div>
+            <div class="box">amaranth</div>
+    
     </div>
 
 </body>
