--- a/pamoka6/uzduotis7.html
+++ b/pamoka6/uzduotis7.html
@@ -10,21 +10,21 @@
 <body>
     <div class="container column">
         <div class="container2">
-            <div class="box grow1 responsive"><img src="user.png" alt="User-pic"></div>
+            <div class="box grow1"><img src="user.png" alt="User-pic"></div>
             <div class="box grow9 column">
                 <div class="box">Lisa</div>
                 <div class="box">hey,have to tried flexbox? this is so mch better than floats.</div>
             </div>
         </div>
         <div class="container2 end">
-            <div class="box grow1 responsive"><img src="user.png" alt="User-pic"></div>
+            <div class="box grow1"><img src="user.png" alt="User-pic"></div>
             <div class="box grow9 text-right column">
                 <div class="box">David</div>
                 <div class="box">Hey, ive never tried it yet</div>
                 <br></div>
         </div>
         <div class="container2">
-            <div class="box grow1 responsive"><img src="user.png" alt="User-pic"></div>
+            <div class="box grow1"><img src="user.png" alt="User-pic"></div>
             <div class="box grow9 column">
                 <div class="box">Lisa</div>
                 <div class="box">its a real layout model, you can forget about clearfix and other tricks.</div>
