--- a/pamoka6/uzduotis11.html
+++ b/pamoka6/uzduotis11.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-menu">
-        <div class="button"><a href="" class="link-no-decor">140 WEST 4TH st</a></div>
+        <div class="button"><a href="" class="link-no-decor">140 WEST 4TH ST</a></div>
         <div class="button"><a href="" class="link-no-decor">HOME</a></div>
         <div class="button"><a href="" class="link-no-decor">ORDER</a></div>
         <div class="button"><a href="" class="link-no-decor">MENUS</a></div>
@@ -52,7 +52,7 @@
             </div>
             <div class="container column ">
                 <div class="container ">
-                    <h1>HOURS</h1>
+                    <h3 class="text-burgundy">HOURS</h3>
                     </div>
                 <div class="container text-align-right ">
                     <div>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">PHONE</div>
+            <div class="container text-burgundy">PHONE</div>
                 <div class="container">
                     <div>
                         <p>212.260.1212</p>
@@ -102,7 +102,8 @@
             <div class="container column center-text">
                 <div><h3>DELIVERY EXPANDED</h3></div>
                 <div><hp>CONTACTLESS TAKE-OUT</p></div>
-                <div><p>To place an order for delivery, please choose from one of our partners below:</p></div>
+                <div><p>To place an order for delivery, 
+                    <br>please choose from one of our partners below:</p></div>
                 <p>
                     <a href="https://postmates.com/" class="link-black">Postmates</a>,
                     <a href="https://www.grubhub.com/" class="link-black">GrubHub</a>,
