--- a/pamoka6/uzduotis11.html
+++ b/pamoka6/uzduotis11.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="container-menu">
-        <div class="button"><a href="" class="link-no-decor">140 WEST 4TH ST</a></div>
-        <div class="button"><a href="" class="link-no-decor">HOME</a></div>
-        <div class="button"><a href="" class="link-no-decor">ORDER</a></div>
-        <div class="button"><a href="" class="link-no-decor">MENUS</a></div>
-        <div class="button"><a href="" class="link-no-decor">GIFT CARDS</a></div>
-        <div class="button"><a href="" class="link-no-decor">ABOUT</a></div>
-        <div class="button"><a href="" class="link-no-decor">CONTACT</a></div>
-        <div class="button"><a href="" class="link-no-decor">PRESS</a></div>
+        <div class="button"><a href="#" class="link-no-decor">140 WEST 4TH ST</a></div>
+        <div class="button"><a href="#" class="link-no-decor">HOME</a></div>
+        <div class="button"><a href="#" class="link-no-decor">ORDER</a></div>
+        <div class="button"><a href="#" class="link-no-decor">MENUS</a></div>
+        <div class="button"><a href="#" class="link-no-decor">GIFT CARDS</a></div>
+        <div class="button"><a href="#" class="link-no-decor">ABOUT</a></div>
+        <div class="button"><a href="#" class="link-no-decor">CONTACT</a></div>
+        <div class="button"><a href="#" class="link-no-decor">PRESS</a></div>
         <div>
             <a href="https://www.facebook.com/"><img src="fb.png" alt="FB"></a>
             <a href="https://twitter.com/?lang=en"><img src="tw.png" alt="TW"></a>
