--- a/pamoka12/uzduotis3/index.html
+++ b/pamoka12/uzduotis3/index.html
@@ -13,6 +13,7 @@
         <a href="2.html" class="button"> Antra dalis</a>
         <a href="3.html" class="button"> Trečia dalis</a>
         <a href="4.html" class="button"> Ketvirta dalis</a>
+        <a href="6.html" class="button"> Šešta dalis</a>
     </div>
 </body>
 </html>
