--- a/pamoka12/uzduotis3/index.html
+++ b/pamoka12/uzduotis3/index.html
@@ -14,6 +14,8 @@
         <a href="3.html" class="button"> Trečia dalis</a>
         <a href="4.html" class="button"> Ketvirta dalis</a>
         <a href="6.html" class="button"> Šešta dalis</a>
+        <a href="7.html" class="button"> Septinta dalis</a>
+        <a href="8.html" class="button"> Aštunta dalis</a>
     </div>
 </body>
 </html>
