--- a/pamoka12/uzduotis3/index.html
+++ b/pamoka12/uzduotis3/index.html
@@ -16,6 +16,7 @@
         <a href="6.html" class="button"> Šešta dalis</a>
         <a href="7.html" class="button"> Septinta dalis</a>
         <a href="8.html" class="button"> Aštunta dalis</a>
+        <a href="9.html" class="button"> Devinta dalis</a>
     </div>
 </body>
 </html>
