--- a/pamoka12/uzduotis3/index.html
+++ b/pamoka12/uzduotis3/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div>
-        <a href="1.html" class="button"> Pirma dalis</a>
-        <a href="2.html" class="button"> Antra dalis</a>
-        <a href="3.html" class="button"> Trečia dalis</a>
-        <a href="4.html" class="button"> Ketvirta dalis</a>
-        <a href="6.html" class="button"> Šešta dalis</a>
-        <a href="7.html" class="button"> Septinta dalis</a>
-        <a href="8.html" class="button"> Aštunta dalis</a>
-        <a href="9.html" class="button"> Devinta dalis</a>
+        <a href="1.html" class="button"> Stačiakampio perimetras</a>
+        <a href="2.html" class="button"> Stačiakampio grietasienio paviršiaus plotas</a>
+        <a href="3.html" class="button"> Apskritimo plotas</a>
+        <a href="4.html" class="button"> Trikampio įžambinė</a>
+        <a href="6.html" class="button"> Skaičių seka</a>
+        <a href="7.html" class="button"> Vektoriaus ilgis</a>
+        <a href="8.html" class="button"> Trikampio plotas pagal Herono formulę</a>
+        <a href="9.html" class="button"> Atstumas tarp dviejų koordinačių</a>
     </div>
 </body>
 </html>
