--- a/pamoka13/pamoka13index.html
+++ b/pamoka13/pamoka13index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pamoka 13</title>
-    <link rel="stylesheet" href="pamoka13.css">
+    <link rel="stylesheet" href="pamoka13index.css">
 </head>
 <body>
     <div>
