--- a/pamoka13/papildomi/uzduotis1.html
+++ b/pamoka13/papildomi/uzduotis1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>uzduotis3</title>
-    <script src="uzduotis3.js"></script>
+    <title>uzduotis1</title>
+    <script src="papildomi/uzduotis1.js"></script>
 </head>
 <body>
     
